# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1131 2012/10/26 20:00:58 zmedico Exp $

*portage-2.2.0_alpha142 (26 Oct 2012)

  26 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha142.ebuild:
  2.2.0_alpha142 version bump. This includes all of the fixes in 2.1.11.31. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.31 (26 Oct 2012)

  26 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.31.ebuild:
  2.1.11.31 version bump. This fixes bug #436294 (show linker version in emerge
  --info), bug #439490 (use checkbashisms for init script QA warning), bug
  #439584 (sync disk after each package merge), bug #439688 (fix unnecessary
  rebuilds triggered by missed updates), and bug #439694 (fix emerge to account
  for initially broken built slot operator deps). Bug #431026 tracks all bugs
  fixed since portage-2.1.11.9.

  24 Oct 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.29.ebuild,
  -portage-2.2.0_alpha140.ebuild:
  Remove old versions.

*portage-2.2.0_alpha141 (18 Oct 2012)

  18 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha141.ebuild,
  -portage-2.2.0_alpha138.ebuild:
  2.2.0_alpha141 version bump. This includes all of the fixes in 2.1.11.30. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.30 (18 Oct 2012)

  18 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.30.ebuild,
  -portage-2.1.11.27.ebuild:
  2.1.11.30 version bump. This fixes various issues with SLOT handling related
  to EAPI 5 sub-slots, including keepdir failures. This also fixes bug #438640
  (remove old binhost protocol, since it causes problems when using a proxy).
  Bug #431026 tracks all bugs fixed since portage-2.1.11.9.

*portage-2.2.0_alpha140 (17 Oct 2012)

  17 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha140.ebuild,
  -portage-2.2.0_alpha139.ebuild: