@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1131 2012/10/26 20:00:58 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1132 2012/10/30 05:10:42 zmedico Exp $
+
+  30 Oct 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.30.ebuild,
+  -portage-2.2.0_alpha141.ebuild:
+  Remove old versions.
 
 *portage-2.2.0_alpha142 (26 Oct 2012)
 
